--- a/week_1_intro/challenge/package.json
+++ b/week_1_intro/challenge/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "assert": "^1.4.1",
     "body-parser": "^1.15.2",
     "consolidate": "^0.14.1",
     "express": "^4.14.0",
